# SPIRV-Cross

./: get_version.py  meson.build
